tests/ui/issues/issue-56806.stderr
error[E0307]: invalid `self` parameter type: Box<(dyn Trait + 'static)>
  --> $DIR/issue-56806.rs:2:34
   |
LL |     fn dyn_instead_of_self(self: Box<dyn Trait>);
   |                                  ^^^^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing Receiver
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver`: for example `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0307`.
